cmake_minimum_required(VERSION 3.24)
project(ibhly1_cpp)

set(CMAKE_CXX_STANDARD 17)
add_subdirectory("${PROJECT_SOURCE_DIR}/1.1" "${PROJECT_SOURCE_DIR}/1.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/1.2" "${PROJECT_SOURCE_DIR}/1.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/2.1" "${PROJECT_SOURCE_DIR}/2.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/2.2" "${PROJECT_SOURCE_DIR}/2.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/3.1" "${PROJECT_SOURCE_DIR}/3.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/3.2" "${PROJECT_SOURCE_DIR}/3.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/4.1" "${PROJECT_SOURCE_DIR}/4.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/4.2" "${PROJECT_SOURCE_DIR}/4.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/6.1" "${PROJECT_SOURCE_DIR}/6.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/7.1" "${PROJECT_SOURCE_DIR}/7.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/8.1" "${PROJECT_SOURCE_DIR}/8.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/9.1" "${PROJECT_SOURCE_DIR}/9.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/9.2" "${PROJECT_SOURCE_DIR}/9.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/10.1" "${PROJECT_SOURCE_DIR}/10.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/10.2" "${PROJECT_SOURCE_DIR}/10.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/11.1" "${PROJECT_SOURCE_DIR}/11.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/11.2" "${PROJECT_SOURCE_DIR}/11.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/11.3" "${PROJECT_SOURCE_DIR}/11.3/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/12.1" "${PROJECT_SOURCE_DIR}/12.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/13.1" "${PROJECT_SOURCE_DIR}/13.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/14.1" "${PROJECT_SOURCE_DIR}/14.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/14.2" "${PROJECT_SOURCE_DIR}/14.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/15.1" "${PROJECT_SOURCE_DIR}/15.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/16.1" "${PROJECT_SOURCE_DIR}/16.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/16.2" "${PROJECT_SOURCE_DIR}/16.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/17.1" "${PROJECT_SOURCE_DIR}/17.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/18.1" "${PROJECT_SOURCE_DIR}/18.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/18.2" "${PROJECT_SOURCE_DIR}/18.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/18.3" "${PROJECT_SOURCE_DIR}/18.3/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/19.1" "${PROJECT_SOURCE_DIR}/19.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/20.1" "${PROJECT_SOURCE_DIR}/20.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/22.1" "${PROJECT_SOURCE_DIR}/22.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/22.2" "${PROJECT_SOURCE_DIR}/22.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/23.1" "${PROJECT_SOURCE_DIR}/23.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/24.1" "${PROJECT_SOURCE_DIR}/24.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/25.1" "${PROJECT_SOURCE_DIR}/25.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/26.1" "${PROJECT_SOURCE_DIR}/26.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/26.2" "${PROJECT_SOURCE_DIR}/26.2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/27.1" "${PROJECT_SOURCE_DIR}/27.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/28.1-29.1-30.1" "${PROJECT_SOURCE_DIR}/28.1-29.1-30.1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/30.2" "${PROJECT_SOURCE_DIR}/30.2/output")




